--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -42,37 +42,19 @@ format:
 </small>
 
 
-## {#workflow_challenges data-menu-title="workflow_challenges" .center}
+## goals {.smaller .center}
 
-::: {style="color:#FFC627;"}
-- what if something needs to be redone, how to you manage that?
-- how do you keep track of data sources, versions?
-- how did I make that figure?
+::: {style="color:#FFC627; font-size:1.5em;"}
+- open, publicly accessible data
+- available, transparent workflow
 :::
-
-
-## {#committee_scenario data-menu-title="committee_scenario" .center}
-
-::: {style="color:#FFC627;"}
-- it seems that the data in figure x and table x are contradictory
-- redo the analyses without omitting those samples
-:::
-
-
-## {#doing_it_wrong data-menu-title="doing_it_wrong" background-image="https://media.giphy.com/media/MEtSuIu6qu0HC/giphy.gif" background-size=50%}
-
-::: {style="color:#FFC627;"}
-*"Basically, if the thought of redoing your analyses is terrifying then you are doing it wrong."*
-— J. Bryan
-:::
-
 
 ## [reproducible research]{style="color:#FFC627;"} is the ability to recompute data analytic results given an observed data set and knowledge of the data analysis pipeline.[^1] {.smaller}
 
 [^1]: Peng 2015 [The reproducibility crisis in science: A statistical counterattack](https://doi.org/10.1111/j.1740-9713.2015.00827.x)
 
 
-## Replicating studies remains the gold standard for rigorous scientific research, but reproducibility is viewed increasingly as a [minimum standard]{style="color:#FFC627;"} that all scientists should strive toward.[^2] {.smaller}
+## Replicating studies remains the gold standard for rigorous scientific research, but [reproducibility is viewed increasingly as a minimum standard]{style="color:#FFC627;"} that all scientists should strive toward.[^2] {.smaller}
 
 [^2]: Alson and Rick 2021 [A Beginner's Guide to Conducting Reproducible Research](https://doi.org/10.1002/bes2.1801)
 
@@ -84,7 +66,8 @@ format:
 ::: {style="color:#FFC627;"}
 - increased trustworthiness
 - more rigorous, reliable science
-- learning more from one another's work
+- learning more from other works
+
 
 <br>
 <br>
@@ -107,14 +90,22 @@ format:
 ::: {.columns}
 ::: {.column width="40%"}
 ::: {style="color:#FFC627;"}
-- helps researchers remember how and why they did *x*
-- enables researchers to quickly and simply modify figures, tables, etc.
-- enables quick reconfiguration of previously conducted research tasks
+- what if something needs to be redone, how to you manage that?
+- how do you keep track of data sources, versions?
+- how did I make that figure?
 :::
 :::
 ::: {.column width="60%"}
 ![](assets/figures/lego_grad_student.png){fig-align="center"}
 :::
+:::
+
+
+## {#doing_it_wrong data-menu-title="doing_it_wrong" background-image="https://media.giphy.com/media/MEtSuIu6qu0HC/giphy.gif" background-size=50%}
+
+::: {style="color:#FFC627;"}
+*"Basically, if the thought of redoing your analyses is terrifying then you are doing it wrong."*
+— J. Bryan
 :::
 
 
@@ -192,10 +183,6 @@ chemistry_data %>%
 ::: {style="font-size:0.5em;"}
 Lowndes, J., Best, B., Scarborough, C. et al. [Our path to better science in less time using open data science tools. Nat Ecol Evol 1, 0160 (2017)](https://doi.org/10.1038/s41559-017-0160)
 :::
-
-
-## {#final_doc data-menu-title="final_doc" .center}
-![](assets/figures/final_doc.gif){fig-align="center"}
 
 
 ## it is all about taming the chaos {.smaller .center .nostretch}
@@ -338,14 +325,9 @@ work with your mentor to determine the best way to publish your data and code
 
 ## ASU research data management services {.center .smaller}
 
-::: {.columns}
-::: {.column width="50%"}
-![](assets/figures/rdmo_website.png){width=100% fig-align="center"}
-:::
-::: {.column with="50%"}
-![](assets/figures/rdaf_nist.png){width=50% fig-align="center"}
-:::
-:::
+![](assets/figures/rdmo_website.png){width=70% fig-align="center"}
+
+[https://rto.asu.edu/research-data-management/](https://rto.asu.edu/research-data-management/)
 
 
 # {#asu_rdm_services data-menu-title="asu_rdm_services" .center}
