--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -66,6 +66,7 @@ format:
 ::: {style="color:#FFC627;"}
 - increased trustworthiness
 - more rigorous, reliable science
+- making available a wealth of data
 - learning more from other works
 
 
